<resources>
    <string name="app_name">To-Do List</string>
    <string name="welcome_to_done">Welcome TO Done</string>
    <string name="loginLabel">Login</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="log">Login</string>
    <string name="registerNew">Register</string>
    <string name="register">Register</string>
    <string name="registerButton">Register</string>
    <string name="to_do_list">To-Do-List</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="done">Done</string>
    <string name="enter_task">Enter task</string>
    <string name="login">Login</string>
    <string name="let_s_get_things_done">Let\'s get things done</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="let_s_get_nthings_done">Let\'s get \nthings done</string>
    <string name="Done">Done</string>
</resources>