<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:fontFamily="cursive"
        android:text="@string/welcome_to_done"  android:textColor="#673AB7"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/subTitle"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:text="@string/loginLabel"  android:textColor="#673AB7"
        android:textSize="45sp"
        android:textStyle="bold"
        android:layout_marginLeft="150dp"  android:layout_marginTop="140dp"/>

    <TextView
        android:id="@+id/username"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:text="@string/username"  android:textColor="#673AB7"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="300dp" />

    <TextView
        android:id="@+id/password"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:text="@string/password"  android:textColor="#673AB7"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="400dp" />

    <EditText
        android:id="@+id/input1"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:layout_marginLeft="180dp"
        android:layout_marginTop="300dp"
        android:autofillHints="username"
        android:inputType="text"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/input2"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:layout_marginLeft="180dp"
        android:layout_marginTop="400dp"
        android:autofillHints="password"
        android:inputType="textPassword"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/log"
        android:layout_width="126dp"
        android:layout_height="61dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="60dp"
        android:onClick="viewList"  android:text="@string/log"  android:textSize="20sp" />

    <Button
        android:id="@+id/reg"
        android:layout_width="126dp"
        android:layout_height="61dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="250dp"
        android:layout_marginBottom="60dp"
        android:onClick="toggle"  android:text="@string/registerNew"  android:textSize="20sp" />

</RelativeLayout>