<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    tools:context=".TDList">
<TextView
    android:id="@+id/title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="15dp"
    android:fontFamily="sans-serif-condensed-light"
    android:text="@string/to_do_list"
    android:textColor="#374b4a"
    android:textSize="50sp"
    android:textStyle="bold" />

<LinearLayout
    android:id="@+id/inputArea"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/title"
    android:orientation="horizontal"
    android:padding="16dp"
    android:background="#F5F5F5">

    <EditText
        android:id="@+id/addTask"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_weight="50"
        android:hint="@string/enter_task"
        android:inputType="text"
        android:textSize="20dp"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/add"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:onClick="addTask"
        android:text="@string/add"
        android:background="#374b4a"
        android:textColor="#F5F5F5"
        android:fontFamily="sans-serif-condensed-medium"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:gravity="center"/>

</LinearLayout>

<androidx.core.widget.NestedScrollView
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@id/inputArea"
    android:layout_marginTop="8dp"
    android:background="#F5F5F5">
    <LinearLayout
        android:id="@+id/taskTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">
    </LinearLayout>
</androidx.core.widget.NestedScrollView>

</RelativeLayout>